<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <RadioGroup
        android:id="@+id/typeGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_type" />

        <RadioButton
            android:id="@+id/radioLost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lost" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/found" />
    </RadioGroup>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:maxLength="50"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="phone"
        android:hint="@string/phone"
        android:inputType="phone"
        android:maxLength="50"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="description"
        android:hint="@string/description"
        android:inputType="text"
        android:maxLength="50"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="date"
        android:hint="@string/date"
        android:inputType="date"
        android:maxLength="50"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="location"
        android:clickable="true"
        android:cursorVisible="false"
        android:focusable="false"
        android:hint="@string/location"
        android:inputType="text"
        android:maxLength="50"
        android:maxLines="1"
        android:singleLine="true" />

    <Button
        android:id="@+id/btnCurrentLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_current_location" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />
</LinearLayout>